src/objects/JBCXM__CSTask__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CSTasks</relationshipLabel>
        <relationshipName>CSTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__CTA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call To Action</label>
        <referenceTo>JBCXM__CTA__c</referenceTo>
        <relationshipLabel>CSTasks</relationshipLabel>
        <relationshipName>CSTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__ClosedDate__c</fullName>
        <description>Closed date of CSTask</description>
        <label>ClosedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__DeltaDays__c</fullName>
        <description>Delta between due date source field and due date</description>
        <label>Delta days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__DisplayOrder__c</fullName>
        <description>Contains value defined playbook.This is applicable when a task is from a playbook.</description>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__DueDateSrc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Due date source</label>
        <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
        <relationshipLabel>CSTask Due Date Source Option</relationshipLabel>
        <relationshipName>CSTask_DueDateSourceOption</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__DynamicData__c</fullName>
        <label>Dynamic data info</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSClosedOverdue__c</fullName>
        <formula>IF( JBCXM__ClosedDate__c &gt;  JBCXM__Date__c , TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSDaysDue__c</fullName>
        <formula>JBCXM__OriginalDueDate__c -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSDaysPastDueDate__c</fullName>
        <formula>IF( JBCXM__Date__c &lt; TODAY() , TODAY() - JBCXM__Date__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Past Due Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSDaysToClose__c</fullName>
        <formula>IF( ISBLANK(JBCXM__ClosedDate__c) ,  TODAY() -  DATEVALUE(CreatedDate) , JBCXM__ClosedDate__c - DATEVALUE(CreatedDate) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSDaysUntilClose__c</fullName>
        <formula>IF(ISBLANK( JBCXM__ClosedDate__c ),  JBCXM__Date__c - TODAY() , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSDueDateVariance__c</fullName>
        <formula>JBCXM__OriginalDueDate__c - JBCXM__Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSOverdueType__c</fullName>
        <formula>IF( NOT( JBCXM__IsClosed__c ) , IF( JBCXM__Date__c - TODAY() &lt; 0, &quot;Overdue&quot;, IF(JBCXM__Date__c - TODAY() &gt; 7, &quot;Open&quot;, &quot;Due next 7 days&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSOverdue__c</fullName>
        <formula>IF( JBCXM__Date__c &lt; TODAY() , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsClosed__c</fullName>
        <formula>NOT(ISNULL(JBCXM__ClosedDate__c))</formula>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsEmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether email is sent from Cockpit for this task.</description>
        <label>Is Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsImp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsImp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__OriginalDueDate__c</fullName>
        <label>Original Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>JBCXM__CSTask__c</referenceTo>
        <relationshipLabel>Depedent tasks</relationshipLabel>
        <relationshipName>DepedentTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Playbook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Playbook</label>
        <referenceTo>JBCXM__Playbook__c</referenceTo>
        <relationshipLabel>CSTasks</relationshipLabel>
        <relationshipName>CSTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__RelatedRecordId__c</fullName>
        <label>Related Record Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__SkipOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skip Option</label>
        <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
        <relationshipLabel>CSTask Due Date Skip Option</relationshipLabel>
        <relationshipName>CSTask_DueDateSkipOption</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Source__c</fullName>
        <label>Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__StartDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to know auto synced or not.</description>
        <label>Auto sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__TaskReference__c</fullName>
        <description>This field is not using actively in the product. This is used for cockpit migration.</description>
        <label>Task Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__TimelineActivityId__c</fullName>
        <description>ID  of the email activity created in timeline</description>
        <label>Timeline Activity Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ToEmailType__c</fullName>
        <description>Type(Contact/User/Manual)of To email address used to send email.</description>
        <label>To Email Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Type</label>
        <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
        <relationshipLabel>CSTask Type</relationshipLabel>
        <relationshipName>CSTaskType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__UID__c</fullName>
        <label>Unique Identifier with in playbook</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>CSTask</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>JBCXM__Subject__c</columns>
        <columns>NAME</columns>
        <columns>JBCXM__Account__c</columns>
        <columns>JBCXM__Assigned__c</columns>
        <columns>JBCXM__Date__c</columns>
        <columns>JBCXM__Priority__c</columns>
        <columns>JBCXM__Status__c</columns>
        <columns>JBCXM__RelatedRecordId__c</columns>
        <columns>JBCXM__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Related Object</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSTasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>